--- a/vignettes/easierData.Rmd
+++ b/vignettes/easierData.Rmd
@@ -1,25 +1,50 @@
 ---
-title: "easierData"
-output: html_document
+title: "easier data"
+author: "Oscar Lapuente-Santana"
+package: easierData
+output: 
+    rmarkdown::html_document
+vignette: >
+    %\VignetteIndexEntry{easier data}
+    %\VignetteEngine{knitr::rmarkdown}
+    %\VignetteEncoding{UTF-8}
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+# Load easier data
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+The `easierData` data package includes two main data objects:
+  
+* **easier_internal**: internal data required for functional performance of EaSIeR framework within the package.
+* **Mariathasan2018_PDL1_treatment**: exemplary bladder cancer dataset with samples from 192 patients. The processed data is publicly available from Mariathasan et al. "TGF-B attenuates tumour response to PD-L1 blockade by contributing to exclusion of T cells", published in Nature, 2018 [doi:10.1038/nature25501](https://doi.org/10.1038/nature25501) via [`IMvigor210CoreBiologies`](http://research-pub.gene.com/IMvigor210CoreBiologies/) package under the CC-BY license.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+The contents of the package can be seen by querying the annotaitonHub for the package name
+```{r}
+# suppressPackageStartupMessages({
+#     library(ExperimentHub)
+#     library(SummarizedExperiment)
+#     library(easierData)
+# })
 
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+# eh <- ExperimentHub()
+# query(eh, "easierData")
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+The individual data objects can be accessed using either their ExperimentHub
+accession number, or the convenience functions provided in this package. For
+instance to access the Mariathasan2018_PDL1_treatment example dataset:
+
+```{r}
+# mariathasan_dataset <- eh[[""]]
+# mariathasan_dataset
+# mariathasan_dataset <- Mariathasan2018_PDL1_treatment()
+# mariathasan_dataset
+```
+# sessionInfo()
+
+```{r sessionInfo}
+sessionInfo()
+```
