--- a/vignettes/easierData.Rmd
+++ b/vignettes/easierData.Rmd
@@ -16,10 +16,34 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Load easier data
 
-The `easierData` data package includes two main data objects:
-  
-* **easier_internal**: internal data required for functional performance of EaSIeR framework within the package.
+The `easierData` data package includes an exemplary dataset to showcase the `easier` package:
+
 * **Mariathasan2018_PDL1_treatment**: exemplary bladder cancer dataset with samples from 192 patients. The processed data is publicly available from Mariathasan et al. "TGF-B attenuates tumour response to PD-L1 blockade by contributing to exclusion of T cells", published in Nature, 2018 [doi:10.1038/nature25501](https://doi.org/10.1038/nature25501) via [`IMvigor210CoreBiologies`](http://research-pub.gene.com/IMvigor210CoreBiologies/) package under the CC-BY license.
+  
+The `easierData` data package also includes multiple data objects so-called internal data of `easier` package since they are indispensable for the functional performance of the package. This includes:
+
+- **opt_models**: cancer-specifc model feature parameters learned, for each quantitative descriptor during training using multi-task learning with randomized cross-validation repeated 100 times. For each quantitative descriptor, 1000 models are available (100 per task).
+    
+- **opt_xtrain_stats**: cancer-specific features mean and standard deviation of the training set used during
+      randomized cross-validation repeated 100 times. It is required for normalization of the test set.
+    
+- **TCGA_mean_pancancer**: mean of the TPM expression of each gene across all TCGA cancer types. 
+      It is required for normalization of input TPM gene expression data.
+    
+- **TCGA_sd_pancancer**: standard deviation of the TPM expression of each gene across all TCGA cancer types. 
+      It is required for normalization of input TPM gene expression data.
+    
+- **cor_scores_genes**: genes used to define correlated scores of immune response.
+    
+- **intercell_networks**: cancer-specific intercellular networks.
+    
+- **lr_frequency_TCGA**: frequency of each ligand-receptor pair feature across the whole TCGA database.
+    
+- **group_lrpairs**: information to group ligand-receptor pairs because of sharing the same gene", either as ligand or receptor.
+    
+- **HGNC_annotation**: gene symbols approved annotations.
+    
+- **scores_signature_genes**: gene signatures for each score of immune response: CYT, TLS, IFNy, Ayers_expIS, Tcell_inflamed, Roh_IS, Davoli_IS, chemokines, IMPRES, MSI and RIR.
 
 The contents of the package can be seen by querying the annotaitonHub for the package name
 ```{r}
