--- a/vignettes/easierData.Rmd
+++ b/vignettes/easierData.Rmd
@@ -1,9 +1,22 @@
 ---
-title: "easier data"
-author: "Oscar Lapuente-Santana"
+title: "easier Data"
+author:
+- name: Óscar Lapuente-Santana^[o.lapuente.santana@tue.nl]
+  affiliation: Computational Biology group, Department of Biomedical Engineering, Eindhoven University of Technology ([BME, TU/e](https://www.tue.nl/en/research/research-groups/computational-biology/))
+- name: Federico Marini^[marinif@uni-mainz.de]
+  affiliation: Institute of Medical Biostatistics, Epidemiology and Informatics ([IMBEI, Mainz](https://www.unimedizin-mainz.de/imbei/imbei/welcome-page.html?L=1))
+- name: Arsenij Ustjanzew^[arsenij.ustjanzew@uni-mainz.de]
+  affiliation: Institute of Medical Biostatistics, Epidemiology and Informatics ([IMBEI, Mainz](https://www.unimedizin-mainz.de/imbei/imbei/welcome-page.html?L=1))
+- name: Francesca Finotello^[francesca.finotello@i-med.ac.at]
+  affiliation: Institute of Bioinformatics, Biocenter Medical University of Innsbruck (https://icbi.i-med.ac.at/index.html)
+- name: Federica Eduati^[f.eduati@tue.nl]
+  affiliation: Computational Biology group, Department of Biomedical Engineering, Eindhoven University of Technology ([BME, TU/e](https://www.tue.nl/en/research/research-groups/computational-biology/))<br/>
+               Institute for Complex Molecular Systems, Eindhoven University of Technology ([ICMS, TU/e](https://www.tue.nl/en/research/institutes/institute-for-complex-molecular-systems/))
+date: "`r Sys.Date()`"
 package: easierData
 output: 
     rmarkdown::html_document
+bibliography: references_easierData.bib
 vignette: >
     %\VignetteIndexEntry{easier data}
     %\VignetteEngine{knitr::rmarkdown}
@@ -17,36 +30,39 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Load easier data
+# Load easier Data
 
-The `easierData` data package includes an exemplary dataset to showcase the `easier` package:
+The `easierData` package includes an exemplary cancer dataset from @Mariathasan2018 to showcase the `easier` package:
 
-* **Mariathasan2018_PDL1_treatment**: exemplary bladder cancer dataset with samples from 192 patients. The processed data is publicly available from Mariathasan et al. "TGF-B attenuates tumour response to PD-L1 blockade by contributing to exclusion of T cells", published in Nature, 2018 [doi:10.1038/nature25501](https://doi.org/10.1038/nature25501) via [`IMvigor210CoreBiologies`](http://research-pub.gene.com/IMvigor210CoreBiologies/) package under the CC-BY license.
+* **Mariathasan2018_PDL1_treatment**: exemplary bladder cancer dataset with samples from 192 patients. This is provided as a `SummarizedExperiment` object containing:
+
+  - Two assays: `counts` and `tpm` expression values.
+  - Additional sample metadata in the `colData` slot, including  pat_id (the id of the patient in the original study), BOR, and TMB (Tumor Mutational Burden).
+  
+    The processed data is publicly available from Mariathasan et al. "TGF-B attenuates tumour response to PD-L1 blockade by contributing to exclusion of T cells", published in Nature, 2018 [doi:10.1038/nature25501](https://doi.org/10.1038/nature25501) via [`IMvigor210CoreBiologies`](http://research-pub.gene.com/IMvigor210CoreBiologies/) package under the CC-BY license. 
   
 The `easierData` data package also includes multiple data objects so-called internal data of `easier` package since they are indispensable for the functional performance of the package. This includes:
 
-- **opt_models**: cancer-specific model feature parameters learned, for each quantitative descriptor during training using multi-task learning with randomized cross-validation repeated 100 times. For each quantitative descriptor, 1000 models are available (100 per task).
+* **opt_models**: the cancer-specific model feature parameters learned in @LAPUENTESANTANA2021100293. For each quantitative descriptor (e.g. pathway activity), models were trained using multi-task learning with randomized cross-validation repeated 100 times. For each quantitative descriptor, 1000 models are available (100 per task). This is provided as a list containing, for each cancer type and quantitative descriptor, a matrix of feature coefficient values across different tasks.
     
-- **opt_xtrain_stats**: cancer-specific features mean and standard deviation of the training set used during
-      randomized cross-validation repeated 100 times. It is required for normalization of the test set.
+* **opt_xtrain_stats**: the cancer-specific features mean and standard deviation of each quantitative descriptor (e.g. pathway activity) training set used in @LAPUENTESANTANA2021100293 during randomized cross-validation repeated 100 times, required for normalization of the test set. This is provided as a list containing, for each cancer type and quantitative descriptor, a matrix with feature mean and sd values across the 100 cross-validation runs.
     
-- **TCGA_mean_pancancer**: mean of the TPM expression of each gene across all TCGA cancer types. 
-      It is required for normalization of input TPM gene expression data.
+* **TCGA_mean_pancancer**: a numeric vector with the mean of the TPM expression of each gene across all TCGA cancer types, required for normalization of input TPM gene expression data.
     
-- **TCGA_sd_pancancer**: standard deviation of the TPM expression of each gene across all TCGA cancer types. 
-      It is required for normalization of input TPM gene expression data.
+* **TCGA_sd_pancancer**: a numeric vector with the standard deviation (sd) of the TPM expression of each gene across all TCGA cancer types, required for normalization of input TPM gene expression data.
     
-- **cor_scores_genes**: genes used to define correlated scores of immune response.
+* **cor_scores_genes**: a character vector with the list of genes used to define correlated scores of immune response. These scores were found to be highly correlated across all 18 cancer types [ @LAPUENTESANTANA2021100293].
     
-- **intercell_networks**: cancer-specific intercellular networks.
+* **intercell_networks**: a list with the cancer-specific intercellular networks, including a pan-cancer network.
     
-- **lr_frequency_TCGA**: frequency of each ligand-receptor pair feature across the whole TCGA database.
+* **lr_frequency_TCGA**: a numeric vector containing the frequency of each ligand-receptor pair feature across the whole TCGA database.
     
-- **group_lrpairs**: information to group ligand-receptor pairs because of sharing the same gene", either as ligand or receptor.
+* **group_lrpairs**: a list with the information on how to group ligand-receptor pairs because of sharing the same gene, either as ligand or receptor.
     
-- **HGNC_annotation**: gene symbols approved annotations.
+* **HGNC_annotation**: a data.frame with the gene symbols approved annotations obtained from https://www.genenames.org/tools/multi-symbol-checker/ [@Tweedie2021].
     
-- **scores_signature_genes**: gene signatures for each score of immune response: CYT, TLS, IFNy, Ayers_expIS, Tcell_inflamed, Roh_IS, Davoli_IS, chemokines, IMPRES, MSI and RIR.
+* **scores_signature_genes**: a list with the gene signatures for each score of immune response: CYT [@ROONEY201548], TLS [@Cabrita2020], IFNy [@Ayers2017], Ayers_expIS [@Ayers2017], 
+Tcell_inflamed [@Ayers2017], Roh_IS [@Roheaah3560], Davoli_IS [@Davolieaaf8399], chemokines [@Messina2012], IMPRES [@Auslander2018], MSI [@Fu2019] and RIR [@JERBYARNON2018984].
 
 The contents of the package can be seen by querying ExperimentHub for the package name:
 
@@ -63,21 +79,21 @@ query(eh, "easierData")
 
 An overview is provided also in tabular form:
 
-```{r}
-list_easierData()
-```
+# ```{r}
+# list_easierData()
+# ```
 
 
 The individual data objects can be accessed using either their ExperimentHub accession number, or the convenience functions provided in this package - both calls are equivalent.
 For instance to access the `Mariathasan2018_PDL1_treatment` example dataset:
 
-```{r, message=FALSE}
-mariathasan_dataset <- eh[["EH6677"]]
-mariathasan_dataset
-
-mariathasan_dataset <- get_Mariathasan2018_PDL1_treatment()
-mariathasan_dataset
-```
+# ```{r, message=FALSE}
+# mariathasan_dataset <- eh[["EH6677"]]
+# mariathasan_dataset
+# 
+# mariathasan_dataset <- get_Mariathasan2018_PDL1_treatment()
+# mariathasan_dataset
+# ```
 
 # Session info
 
