--- a/vignettes/easierData.Rmd
+++ b/vignettes/easierData.Rmd
@@ -78,15 +78,15 @@ Tcell_inflamed [@Ayers2017], Roh_IS [@Roheaah3560], Davoli_IS [@Davolieaaf8399],
 
 Starting R, this package can be installed as follows:
 
-```{r, eval=TRUE}
-install.packages("../easierData_0.9.0.tar.gz", repos = NULL, type="source")
+```{r, eval=FALSE}
+BiocManager::install("easierData")
 ```
 
 The contents of the package can be seen by querying ExperimentHub for the package name:
 
 ```{r}
 suppressPackageStartupMessages({
-    library(ExperimentHub)
+    library("ExperimentHub")
     library("easierData")
 })
 
@@ -117,3 +117,4 @@ mariathasan_dataset
 sessionInfo()
 ```
 
+# References {-}
