--- a/vignettes/references_easierData.bib
+++ b/vignettes/references_easierData.bib
@@ -271,7 +271,8 @@ url={https://doi.org/10.1038/srep00765}
 	year = {2017},
 	doi = {10.1126/science.aaf8399},
 	publisher = {American Association for the Advancement of Science},
-	abstract = {Cancer immunotherapy produces durable clinical responses in only a subset of patients. Identification of tumor characteristics that correlate with responses could lead to predictive biomarkers and shed light on causal mechanisms. Davoli et al. found that human tumors with extensive aneuploidy{\textemdash}i.e., that display a highly abnormal number of chromosomes and chromosomal segments{\textemdash}express fewer markers of the immune cells responsible for tumor destruction. In a retrospective analysis of clinical trial data, they found that melanoma patients with highly aneuploid tumors were less likely to benefit from immune checkpoint blockade therapy than patients whose tumors had a more normal karyotype. Thus, aneuploidy appears to enhance the ability of tumors to evade the immune system.Science, this issue p. 10.1126/science.aaf8399 INTRODUCTIONAneuploidy, also known as somatic copy number alterations (SCNAs), is widespread in human cancers and has been proposed to drive tumorigenesis. The relationship between SCNAs and the characteristic functional features or {\textquotedblleft}hallmarks{\textquotedblright} of cancer is not well understood. Among these cancer hallmarks is immune evasion, which is accomplished by neoantigen editing, defects in antigen presentation and inhibition of tumor infiltration, and/or cytotoxic activities of immune cells. Whether and how tumor SCNA levels influence immune evasion is of particular interest as this information could potentially be used to improve the efficacy of immune checkpoint blockade, a therapy that has produced durable responses in a subset of cancer patients.RATIONALEUnderstanding how SCNAs and mutation load affect tumor evolution, and through what mechanisms, is a key objective in cancer research. To explore the relationships between SCNA levels, tumor mutations, and cancer hallmarks, we examined data from 5255 tumor/normal samples representing 12 cancer types from The Cancer Genome Atlas project. We assigned each tumor an SCNA score and looked for correlations with the number and types of tumor mutations. We also compared the gene expression profiles of tumors with high versus low SCNA levels to identify differences in cellular signaling pathways.RESULTSFirst, we found that, for most tumors, there was a positive correlation between SCNA levels and the total number of mutations. Second, tumors harboring activating oncogenic mutations in the receptor tyrosine kinase{\textendash}RAS{\textendash}phosphatidylinositol 3-kinase pathway showed fewer SCNAs, a finding at odds with the hypothesis of oncogene-driven genomic instability. Third, we found that tumors with high levels of SCNAs showed elevated expression of cell cycle and cell proliferation markers (cell cycle signature) and reduced expression of markers for cytotoxic immune cell infiltrates (immune signature). The increased expression level of the cell cycle signature was primarily predicted by focal SCNAs, with a lesser contribution of arm and whole-chromosome SCNAs. In contrast, the lower expression level of the immune signature was primarily predicted by high levels of arm and whole-chromosome SCNAs. SCNA levels were a stronger predictor of markers of cytotoxic immune cell infiltration than tumor mutational load. Finally, through analysis of data from two published clinical trials of immunotherapy in melanoma patients, we found that high SCNA levels in tumors correlated with poorer survival of patients. The combination of the tumor SCNA score and the tumor mutational load was a better predictor of survival after immunotherapy than either biomarker alone.CONCLUSIONWe found that two hallmarks of cancer, cell proliferation and immune evasion, are predicted by distinct types of aneuploidy that likely act through distinct mechanisms. Proliferation markers mainly correlated with focal SCNAs, implying a mechanism related to the action of specific genes targeted by these SCNAs. Immune evasion markers mainly correlated with arm- and chromosome-level SCNAs, consistent with a mechanism related to general gene dosage imbalance rather than the action of specific genes. A retrospective analysis of melanoma patients treated with immune checkpoint blockade anti{\textendash}CTLA-4 (cytotoxic T lymphocyte{\textendash}associated protein 4) therapy revealed that high SCNA levels were associated with a poorer response, suggesting that tumor aneuploidy might be a useful biomarker for predicting which patients are most likely to benefit from this therapy.Genetic events associated with two cancer hallmarks: cell proliferation and immune evasion.Across several human tumor types, high SCNA levels correlate with increased expression of cell cycle markers and decreased expression of markers of cytotoxic immune cell infiltrates. A high load of tumor neoantigens (reflecting a high level of point mutations) promotes the detection of tumors by the immune system, limiting immune evasion. The relative contribution of focal, arm/chromosome, and neoantigen load to the prediction of proliferation and immune evasion is shown.Immunotherapies based on immune checkpoint blockade are highly effective in a subset of patients. An ongoing challenge is the identification of biomarkers that predict which patients will benefit from these therapies. Aneuploidy, also known as somatic copy number alterations (SCNAs), is widespread in cancer and is posited to drive tumorigenesis. Analyzing 12 human cancer types, we find that, for most, highly aneuploid tumors show reduced expression of markers of cytotoxic infiltrating immune cells, especially CD8+ T cells, and increased expression of cell proliferation markers. Different types of SCNAs predict the proliferation and immune signatures, implying distinct underlying mechanisms. Using published data from two clinical trials of immune checkpoint blockade therapy for metastatic melanoma, we found that tumor aneuploidy inversely correlates with patient survival. Together with other tumor characteristics such as tumor mutational load, aneuploidy may thus help identify patients most likely to respond to immunotherapy.},
+	abstract = {Cancer immunotherapy produces durable clinical responses in only a subset of patients. Identification of tumor characteristics that correlate with responses could lead to predictive biomarkers and shed light on causal mechanisms. Davoli et al. found that human tumors with extensive aneuploidy—i.e., that display a highly abnormal number of chromosomes and chromosomal segments—express fewer markers of the immune cells responsible for tumor destruction. In a retrospective analysis of clinical trial data, they found that melanoma patients with highly aneuploid tumors were less likely to benefit from immune checkpoint blockade therapy than patients whose tumors had a more normal karyotype. Thus, aneuploidy appears to enhance the ability of tumors to evade the immune system. Science, this issue p. 10.1126/science.aaf8399
+ Human tumors that display extensive chromosomal aberrations appear to be more resistant to immune attack. Immunotherapies based on immune checkpoint blockade are highly effective in a subset of patients. An ongoing challenge is the identification of biomarkers that predict which patients will benefit from these therapies. Aneuploidy, also known as somatic copy number alterations (SCNAs), is widespread in cancer and is posited to drive tumorigenesis. Analyzing 12 human cancer types, we find that, for most, highly aneuploid tumors show reduced expression of markers of cytotoxic infiltrating immune cells, especially CD8+ T cells, and increased expression of cell proliferation markers. Different types of SCNAs predict the proliferation and immune signatures, implying distinct underlying mechanisms. Using published data from two clinical trials of immune checkpoint blockade therapy for metastatic melanoma, we found that tumor aneuploidy inversely correlates with patient survival. Together with other tumor characteristics such as tumor mutational load, aneuploidy may thus help identify patients most likely to respond to immunotherapy.},
 	issn = {0036-8075},
 	URL = {https://science.sciencemag.org/content/355/6322/eaaf8399},
 	eprint = {https://science.sciencemag.org/content/355/6322/eaaf8399.full.pdf},
@@ -282,13 +283,13 @@ url={https://doi.org/10.1038/srep00765}
 author = {Mark Ayers AND Jared Lunceford AND Michael Nebozhyn AND Erin Murphy AND Andrey Loboda AND David R. Kaufman AND Andrew Albright AND Jonathan D. Cheng AND S. Peter Kang AND Veena Shankaran AND Sarina A. Piha-Paul AND Jennifer Yearley AND Tanguy Y. Seiwert AND Antoni Ribas AND Terrill K. McClanahan},
 journal = {The Journal of Clinical Investigation},
 publisher = {The American Society for Clinical Investigation},
-title = {IFN-$\gamma$–related mRNA profile predicts clinical response to PD-1 blockade},
+title = {IFN-y–related mRNA profile predicts clinical response to PD-1 blockade},
 year = {2017},
 month = {8},
 volume = {127},
 url = {https://www.jci.org/articles/view/91190},
 pages = {2930-2940},
-abstract = {Programmed death-1–directed (PD-1–directed) immune checkpoint blockade results in durable antitumor activity in many advanced malignancies. Recent studies suggest that IFN-$\gamma$ is a critical driver of programmed death ligand-1 (PD-L1) expression in cancer and host cells, and baseline intratumoral T cell infiltration may improve response likelihood to anti–PD-1 therapies, including pembrolizumab. However, whether quantifying T cell–inflamed microenvironment is a useful pan-tumor determinant of PD-1–directed therapy response has not been rigorously evaluated. Here, we analyzed gene expression profiles (GEPs) using RNA from baseline tumor samples of pembrolizumab-treated patients. We identified immune-related signatures correlating with clinical benefit using a learn-and-confirm paradigm based on data from different clinical studies of pembrolizumab, starting with a small pilot of 19 melanoma patients and eventually defining a pan-tumor T cell–inflamed GEP in 220 patients with 9 cancers. Predictive value was independently confirmed and compared with that of PD-L1 immunohistochemistry in 96 patients with head and neck squamous cell carcinoma. The T cell–inflamed GEP contained IFN-$\gamma$–responsive genes related to antigen presentation, chemokine expression, cytotoxic activity, and adaptive immune resistance, and these features were necessary, but not always sufficient, for clinical benefit. The T cell–inflamed GEP has been developed into a clinical-grade assay that is currently being evaluated in ongoing pembrolizumab trials.},
+abstract = {Programmed death-1–directed (PD-1–directed) immune checkpoint blockade results in durable antitumor activity in many advanced malignancies. Recent studies suggest that IFN-y is a critical driver of programmed death ligand-1 (PD-L1) expression in cancer and host cells, and baseline intratumoral T cell infiltration may improve response likelihood to anti–PD-1 therapies, including pembrolizumab. However, whether quantifying T cell–inflamed microenvironment is a useful pan-tumor determinant of PD-1–directed therapy response has not been rigorously evaluated. Here, we analyzed gene expression profiles (GEPs) using RNA from baseline tumor samples of pembrolizumab-treated patients. We identified immune-related signatures correlating with clinical benefit using a learn-and-confirm paradigm based on data from different clinical studies of pembrolizumab, starting with a small pilot of 19 melanoma patients and eventually defining a pan-tumor T cell–inflamed GEP in 220 patients with 9 cancers. Predictive value was independently confirmed and compared with that of PD-L1 immunohistochemistry in 96 patients with head and neck squamous cell carcinoma. The T cell–inflamed GEP contained IFN-y–responsive genes related to antigen presentation, chemokine expression, cytotoxic activity, and adaptive immune resistance, and these features were necessary, but not always sufficient, for clinical benefit. The T cell–inflamed GEP has been developed into a clinical-grade assay that is currently being evaluated in ongoing pembrolizumab trials.},
 number = {8},
 doi = {10.1172/JCI91190},
 url = {https://doi.org/10.1172/JCI91190},
@@ -753,7 +754,7 @@ and Fine, Gregg D.
 and Hegde, Priti S.
 and Bourgon, Richard
 and Powles, Thomas},
-title={TGF$\beta$ attenuates tumour response to PD-L1 blockade by contributing to exclusion of T cells},
+title={TGFB attenuates tumour response to PD-L1 blockade by contributing to exclusion of T cells},
 journal={Nature},
 year={2018},
 month={Feb},
@@ -761,7 +762,7 @@ day={01},
 volume={554},
 number={7693},
 pages={544-548},
-abstract={In humans, TGF$\beta$ signalling is associated with lack of response to immunotherapy in immune-excluded tumours; in mouse models of this immune phenotype, robust tumour infiltration by T cells and tumour regression are observed only when checkpoint inhibition is combined with inhibition of TGF$\beta$ signalling.},
+abstract={In humans, TGFB signalling is associated with lack of response to immunotherapy in immune-excluded tumours; in mouse models of this immune phenotype, robust tumour infiltration by T cells and tumour regression are observed only when checkpoint inhibition is combined with inhibition of TGFB signalling.},
 issn={1476-4687},
 doi={10.1038/nature25501},
 url={https://doi.org/10.1038/nature25501}
